--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 # --------- pytorch --------- #
-torch>=2.0.0
-torchvision>=0.15.0
-lightning>=2.0.0
-torchmetrics>=0.11.4
+torch>=2.8.0
+torchvision>=0.23.0
+lightning>=2.4.0
+torchmetrics>=1.8.0
 
 # --------- hydra --------- #
 hydra-core==1.3.2
@@ -26,19 +26,18 @@ phonemizer      # phonemization of text
 tensorboard
 librosa
 Cython
-numpy
+numpy==1.26.4
 einops
 inflect
 Unidecode
 scipy
 torchaudio
 matplotlib
-pandas
 conformer==0.3.2
 diffusers # developed using version ==0.25.0
 notebook
 ipywidgets
-gradio==3.43.2
+gradio==5.41.1
 gdown
 wget
 seaborn
